apps/pihole/pihole-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: "private-ca"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - pihole.i3sec.com.au
    secretName: pihole-tls
  rules:
    - host: pihole.i3sec.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 8080
